[project]
name = "enforcer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ehsanul Hoque", email = "ehsanul@ehsanul.com"},
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "python-dotenv>=1.0.1",
    "svix-ksuid>=0.6.2",
    "ultralytics>=8.3.48",
]
requires-python = ">=3.12.4"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
